[project]
name = "information-extraction"
version = "0.1.0"
description = ""
authors = [
    {name = "aib",email = "aibagay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rsa (==4.2)",
    "langextract (>=1.0.9,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "litellm (>=1.76.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
